test/translator/success/imports/folder/subfolder/file.prez
import "../../../imports.prez"

int func() {
  return imports::add(3, 4);
}

