test/translator/error/base_method.prez
class A {
  public static void f(){}

  public virtual String name() {
    return "A";
  }
}

class B {
  public void f() {
    A.f();
    A.name(); //
  }
}
